# 2025_limo_project

./: .gitignore  CODE_ANALYSIS.md  PERFORMANCE_BOTTLENECKS.md  PERFORMANCE_FINDINGS.md  README.md  install_deps.sh  send_s_path.py
fakemapconfig/maps/: user_map.json
maps/: map.pgm  map.yaml  my_map.pgm  my_map.yaml  nav2_my.yaml
rviz_config/: asd.rviz  path_follower.rviz
scripts/: run_path_follower_tilix.sh
src/limo_cartographer/: CMakeLists.txt  package.xml
src/limo_cartographer/config/: limo_2d.lua
src/limo_cartographer/launch/: cartographer_mapping.launch.py
src/limo_localization/: CMakeLists.txt  package.xml
src/limo_localization/config/: amcl.yaml
src/limo_localization/launch/: localization.launch.py
src/map_view_bringup/: CMakeLists.txt  package.xml
src/map_view_bringup/launch/: map_view.launch.py
src/map_view_bringup/params/: map_server.yaml
src/map_view_bringup/rviz/: map_only.rviz
src/path_follower_pkg/: package.xml  setup.py  setup.py.bak
src/path_follower_pkg/config/: follower_params.yaml  path_follower_params.yaml
src/path_follower_pkg/launch/: path_follower.launch.py
src/path_follower_pkg/path_follower_pkg/: __init__.py  accuracy_utils.py  ackermann_path_planner.py  apf_planner.py  bezier_utils.py  control_panel.py  control_panel.py.old  costmap_constraint_filter.py  de_casteljau_subdivider.py  de_casteljau_utils.py  fake_robot.py  follower_node.py  follower_node.py.backup  lidar_constraint_filter.py  local_bezier_planner.py  math_utils.py  path_controller.py  path_manager.py  path_recorder.py  path_utils.py  planner_interface.py  rrt_planner.py  spline.py  spline_utils.py  stanley_controller.py  velocity_profile.py
src/path_follower_pkg/path_follower_pkg/control_panel/: __init__.py  gui.py  handlers.py  main.py  node.py  widgets.py
